--- a/public/css/main.css
+++ b/public/css/main.css
@@ -185,11 +185,11 @@ h6 {
 }
 
 .bg-gra-02 {
-  background: -webkit-gradient(linear, left bottom, right top, from(#fc2c77), to(#6c4079));
-  background: -webkit-linear-gradient(bottom left, #fc2c77 0%, #6c4079 100%);
-  background: -moz-linear-gradient(bottom left, #fc2c77 0%, #6c4079 100%);
-  background: -o-linear-gradient(bottom left, #fc2c77 0%, #6c4079 100%);
-  background: linear-gradient(to top right, #fc2c77 0%, #6c4079 100%);
+  background: -webkit-gradient(linear, left bottom, right top, from(#d576e8), to(#6c4079));
+  background: -webkit-linear-gradient(bottom left, #d576e8 0%, #6c4079 100%);
+  background: -moz-linear-gradient(bottom left, #d576e8 0%, #6c4079 100%);
+  background: -o-linear-gradient(bottom left, #d576e8 0%, #6c4079 100%);
+  background: linear-gradient(to top right, #d576e8 0%, #6c4079 100%);
 }
 
 /* ==========================================================================
