--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8160,7 +8160,7 @@ a {
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease;
-  color: #fbceb5; }
+  color: #d576e8; }
   a:hover, a:focus {
     text-decoration: none !important;
     outline: none !important;
@@ -8175,7 +8175,7 @@ h1, h2, h3, h4, h5,
   color: #000; }
 
 .bg-primary {
-  background: #fbceb5 !important; }
+  background: #d576e8 !important; }
 
 .ftco-section {
   padding: 7em 0; }
@@ -8321,9 +8321,9 @@ textarea.form-control {
 
 /* Style the checkmark/indicator */
 .checkbox-primary {
-  color: #fbceb5; }
+  color: #d576e8; }
   .checkbox-primary input:checked ~ .checkmark:after {
-    color: #fbceb5; }
+    color: #d576e8; }
 
 .btn {
   cursor: pointer;
@@ -8335,20 +8335,20 @@ textarea.form-control {
   .btn:hover, .btn:active, .btn:focus {
     outline: none; }
   .btn.btn-primary {
-    background: #fbceb5 !important;
-    border: 1px solid #fbceb5 !important;
+    background: #d576e8 !important;
+    border: 1px solid #d576e8 !important;
     color: #000 !important; }
     .btn.btn-primary:hover {
-      border: 1px solid #fbceb5;
+      border: 1px solid #d576e8;
       background: transparent;
-      color: #fbceb5; }
+      color: #d576e8; }
     .btn.btn-primary.btn-outline-primary {
-      border: 1px solid #fbceb5;
+      border: 1px solid #d576e8;
       background: transparent;
-      color: #fbceb5; }
+      color: #d576e8; }
       .btn.btn-primary.btn-outline-primary:hover {
         border: 1px solid transparent;
-        background: #fbceb5;
+        background: #d576e8;
         color: #fff; }
 
 
