--- a/public/css/style3.css
+++ b/public/css/style3.css
@@ -767,6 +767,21 @@ a:focus {
   height: 100%;
 }
 
+.map-responsive {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%; /* This creates a 16:9 aspect ratio. Adjust if needed */
+}
+
+.map-responsive iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
 .info_section {
   background-color: #363636;
   color: #ffffff;
