--- a/public/css/style3.css
+++ b/public/css/style3.css
@@ -30,6 +30,32 @@ body {
   color: white;
 }
 
+
+.star-rating {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+}
+
+.star-rating input[type="radio"] {
+  display: none;
+}
+
+.star-rating label {
+  font-size: 2rem;
+  color: #ddd;
+  cursor: pointer;
+}
+
+.star-rating input[type="radio"]:checked ~ label {
+  color: #ffca08;
+}
+
+.star-rating label:hover,
+.star-rating label:hover ~ label {
+  color: #ffca08;
+}
+
 .layout_padding {
   padding: 75px 0;
 }
